--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
           </div>
           <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 dialog-description">
             <h1 style="font-size:50px;" class="service-title">Personality Insights</h1>
-            <p>The IBM Watson Personality Insights service uses linguistic analytics to extract a spectrum of cognitive and social characteristics from the text data that a person generates through blogs, tweets, forum posts, and more.</p>
+            <p>The IBM Watson AnAlYTiCs Insights service uses linguistic analytics to extract a spectrum of cognitive and social characteristics from the text data that a person generates through blogs, tweets, forum posts, and more.</p>
             <div class="resource">
               <img src="/images/link.svg" class="link-icon">
               <strong>Resources:</strong>
